# CMakePractice

./: .gitignore  CMakeLists.txt  LICENSE  Main.c  README.md
src/: CMakeLists.txt  gameContent.c  gameContent.h
src/characters/: alice.c  alice.h
test/: CMakeLists.txt  gameContentTest.c  gameContentTest.h  testing.h  unitTests.c
test/characters/: aliceTest.c  aliceTest.h
